chore: remove code smell